@@ -326,7 +326,7 @@ utils/config.ml: utils/config.mlp Makefile.config utils/Makefile
 
 .PHONY: reconfigure
 reconfigure:
-	./configure $(CONFIGURE_ARGS)
+	ac_read_git_config=true ./configure $(CONFIGURE_ARGS)
 
 utils/domainstate.ml: utils/domainstate.ml.c runtime/caml/domain_state.tbl
 	$(CPP) -I runtime/caml $< > $@
