@@ -17,6 +17,11 @@
 rm -rf autom4te.cache
 
 autoconf --force --warnings=all,error
+
+# Allow pre-processing of configure arguments for Git check-outs
+# The sed call removes dra27's copyright on the whole configure script...
+sed -e '/^#[^!]/d' tools/git-dev-options.sh > configure.tmp
+
 # Some distros have the 2013 --runstatedir patch to autoconf (see
 # http://git.savannah.gnu.org/cgit/autoconf.git/commit/?id=a197431414088a417b407b9b20583b2e8f7363bd
 # in the GNU autoconf repo), and some don't, so ensure its effects are
@@ -27,6 +32,9 @@ autoconf --force --warnings=all,error
 sed -e '/^runstatedir/d' \
     -e '/-runstatedir /{N;N;N;N;N;N;N;N;d;}' \
     -e '/--runstatedir=DIR/d' \
-    -e 's/ runstatedir//' configure > configure.tmp
+    -e 's/ runstatedir//' \
+    -e '1d' \
+    configure >> configure.tmp
+
 mv -f configure.tmp configure
 chmod +x configure
