@@ -265,6 +265,10 @@ Working version
   incompatible with C.
   (David Allsopp, review by Nicolás Ojeda Bär, report by Sebastian Rasmussen)
 
+- #8995: allow developers to specify frequently-used configure options in
+  Git (ocaml.configure option) See HACKING.adoc for further details.
+  (David Allsopp, review by Gabriel Scherer)
+
 ### Compiler user-interface and warnings:
 
 - #8702, #8777: improved error messages for fixed row polymorphic variants
